<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Expresso</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="app_title">expresso</string>
    <string name="button_gps">GPS MAP</string>
    <string name="button_other">CAMPUS MAP</string>
    <string name="title_activity_static_list">StaticListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dynamic_list">DynamicListActivity</string>
    <string name="title_activity_menu_display">MenuDisplayActivity</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="title_activity_confirmation">ConfirmationActivity</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="order_number">Order #:</string>
    <string name="OrderNum">1234567</string>
    <string name="order_time">Date/Time:</string>
    <string name="order">Item:</string>
    <string name="order_time_content">12:10:00 pm</string>
    <string name="title_activity_fancy_menu">FancyMenuActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="view_order">View Order</string>
    <string name="check_out_button"> Check Out!</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="exit_conf">Exit</string>

    <string-array name="order_content"></string-array>

    <string name="logo">Expresso Logo</string>
    <string name="title_activity_splash">Splash</string>
    <string name="find_your_store">FIND YOUR STORE:</string>
    <string name="order_summary">ORDER SUMMARY:</string>
    <string name="order_total">ORDER TOTAL:</string>

</resources>