<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/back_to_menu"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:title="@string/back_to_menu"
        android:visible="false"/>
    <item
        android:id="@+id/view_order"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:title="@string/view_order"/>
    <item
        android:id="@+id/back_to_start"
        android:orderInCategory="90"
        android:showAsAction="always"
        android:title="@string/view_order"
        android:visible="false"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>