<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8cd3cf"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ConfirmationActivity" >

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/app_title"
        android:textColor="#fbf9d8"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:keepScreenOn="true"
        android:text="@string/order_confirmation"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:keepScreenOn="true"
            android:text="@string/order_number"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confirmation_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:keepScreenOn="true"
            android:text="@string/OrderNum"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fullscreen_content"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="90"
            android:keepScreenOn="true"
            android:text="@string/order_time"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/confirmation_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:keepScreenOn="true"
            android:text="@string/order_time_content"
            android:textColor="#000000"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:keepScreenOn="true"
        android:text="@string/order"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/confirmation_order_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:keepScreenOn="true"
        android:text="@array/order_content"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" >
    </ListView>

</LinearLayout>