<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#598e96"
    tools:context=".MainActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:keepScreenOn="true"
        android:text="@string/app_title"
        android:textColor="#ffffff"
        android:textSize="50sp"
        android:gravity="center_horizontal"
        android:textStyle="bold" />

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:onClick="showStaticLocations"
            android:text="@string/button_other" />

        <Button
            android:id="@+id/button1"
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:onClick="showDynamicLocations"
            android:text="@string/button_gps" />

    </LinearLayout>

</FrameLayout>
